--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+@import url(//db.onlinewebfonts.com/c/ce366fe567377fc5597ebfa52b38073f?family=Burbank+Big+Regular);
 body {
     background-color: #181818;
-    font-family: 'Sofia Sans', sans-serif;
+    font-family: 'Burbank Big Regular', sans-serif;
     margin: 0;
     padding: 0;
 }
